Added in teh last of the concrete blocks and moved them over to make room for menu

--- a/compo/index.html
+++ b/compo/index.html
@@ -6,6 +6,10 @@
 	<script type="text/javascript" src="./keyHandlerUtils.js"></script>
 	<script type="text/javascript" src="./FiltoidCollisionManager.js"></script>
 	
+	<!--  Add in the game specific libraries-->
+	<script type="text/javascript" src="./js/game.js"></script>
+	<script type="text/javascript" src="./js/base.js"></script>
+	
 	<!-- Addthe jquery library for some nice syntatic sugar :) -->
 	<script type="text/javascript" src="jquery.min.js"></script>
 </head>
