Added the ability to place towers - currently can place as many towers as you like but the feature is there

--- a/compo/index.html
+++ b/compo/index.html
@@ -9,12 +9,14 @@
 	<!--  Add in the game specific libraries-->
 	<script type="text/javascript" src="./js/game.js"></script>
 	<script type="text/javascript" src="./js/base.js"></script>
+	<script type="text/javascript" src="./js/towerButton.js"></script>
+	<script type="text/javascript" src="./js/placeBlock.js"></script>
 	
 	<!-- Addthe jquery library for some nice syntatic sugar :) -->
 	<script type="text/javascript" src="jquery.min.js"></script>
 </head>
 
-<body onLoad="loadGame();">
+<body onLoad="loadGame();" style="background-color:black">
 
 	<div id="canvas-div" style="width:900px; height:600px; margin:0px auto; border-width:3px; border-style:solid; border-color:#ff9900">
 		<canvas id="canvas" width="900px" height="600px">
