--- a/compo/index.html
+++ b/compo/index.html
@@ -12,6 +12,7 @@
 	<script type="text/javascript" src="./js/towerButton.js"></script>
 	<script type="text/javascript" src="./js/placeBlock.js"></script>
 	<script type="text/javascript" src="./js/menuButton.js"></script>
+	<script type="text/javascript" src="./js/enemy.js"></script>
 	
 	<!-- Addthe jquery library for some nice syntatic sugar :) -->
 	<script type="text/javascript" src="jquery.min.js"></script>
