balanced the game a bit more - it is now not so easy to win or too difficult. It's prob a bit easy but we can make it harder later

--- a/compo/index.html
+++ b/compo/index.html
@@ -20,6 +20,7 @@
 
 <body onLoad="loadGame();" style="background-color:black">
 
+	<center><div style="color:white">Ludum Dare 27: 10 Second Tower Defence</div></center>
 	<div id="canvas-div" style="width:900px; height:600px; margin:0px auto; border-width:3px; border-style:solid; border-color:#ff9900">
 		<canvas id="canvas" width="900px" height="600px">
 			<p>Your browser does not support the canvas element. I'm afraid I am only supporting Chrome during LD25 - I just don't have time to work through browser specific issues - Filtoid. Try it in other browsers though - it might work.</p>
